# AI-Powered-Code-Reviewer-and-Quality-Assistant

./: LICENSE  README.md  TODO.md
m3/: TODO.md
m3/ai_code_reviewer/: .pre-commit-config.yaml  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
m3/ai_code_reviewer/.streamlit/: config.toml
m3/ai_code_reviewer/configs/: settings.py
m3/ai_code_reviewer/core/: docstring_generator.py  parser.py  validator.py
m3/ai_code_reviewer/models/: llama_interface.py
m3/ai_code_reviewer/reports/: json_reporter.py
m3/ai_code_reviewer/tests/: __init__.py  test_parser.py
m3/ai_code_reviewer/ui/: dashboard.py
