[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-reviewer"
dynamic = ["version"]
description = "AI-Powered Code Reviewer & Quality Assistant with LLaMA and Streamlit"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
  "streamlit>=1.28.0",
  "ollama>=0.1.7",
  "pydocstyle>=6.3.0",
  "plotly>=5.17.0",
  "pandas>=2.0.0",
  "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black",
  "isort",
]

[project.scripts]
ai-review = "ai_code_reviewer.main:run_cli"

[project.urls]
Homepage = "https://github.com/example/ai-code-reviewer"
Repository = "https://github.com/example/ai-code-reviewer.git"

